<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/product"
            android:textColor="@color/primaryLightColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_price"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/plus_price"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_exposure_plus_1" />

        <EditText
            android:id="@+id/edit_text_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_quantity"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/decrease_price"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_exposure_neg_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/supplier"
            android:textColor="@color/primaryLightColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_supname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_suppliername"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_phonenumber"
            android:inputType="phone" />

        <ImageView
            android:id="@+id/phone_call"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="6dp"
            android:src="@drawable/ic_local_phone" />


    </LinearLayout>
</ScrollView>